[project]
name = "replay"
version = "0.1.0"
description = ""
authors = [
    {name = "viown",email = "48097677+viown@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "pynput (>=1.8.1,<2.0.0)"
]


[tool.poetry.scripts]
replay = "replay.cli:replay"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
